package pers.xf.learn.designpattern.factorymethod.shape;

public interface IShape {
    void draw();
}
