package pers.xf.learn.designpattern.factorymethod.shape;

public interface IShapeFactory {
    IShape createShape();
}
